--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -17,7 +17,8 @@ en: &DEFAULT_EN
   meta_label                 :
   tags_label                 : "Tags:"
   categories_label           : "Categories:"
-  date_label                 : "Updated:"
+  date_label                 : "First created:"
+  updated_label              : "Last updated:"
   comments_label             : "Leave a Comment"
   comments_title             : "Comments"
   more_label                 : "Learn More"
