initial draft of IA crawler guide

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  # - title: "Internet Archive Web Crawler"
-  #  url: /guide/internet-archive-crawler/
+  - title: "Internet Archive Web Crawler"
+    url: guide/internet-archive-crawler/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
